commission_bps variable name causing issues

--- a/roles/jito/templates/validator.sh.j2
+++ b/roles/jito/templates/validator.sh.j2
@@ -20,7 +20,7 @@
       --tip-payment-program-pubkey T1pyyaTNZsKv2WcRAB8oVnk93mLJw2XzjtVYqCsaHqt \
       --tip-distribution-program-pubkey 4R3gSG8BpU4t19KYj8CfnbtRpnT8gtk4dvTHxVRwc2r7 \
       --merkle-root-upload-authority GZctHpWXmsZC1YHACTGGcHhYxjdRqQvTpYkb9LMvxDib \
-      --commission-bps {{ commission-bps }} \
+      --commission-bps {{ commission_bps }} \
       --relayer-url {{ jito_relayer_url }} \
       --block-engine-url {{ jito_block_engine_url }} \
       --expected-bank-hash 69p75jzzT1P2vJwVn3wbTVutxHDcWKAgcbjqXvwCVUDE \
@@ -44,7 +44,7 @@
       --tip-payment-program-pubkey DCN82qDxJAQuSqHhv2BJuAgi41SPeKZB5ioBCTMNDrCC \
       --tip-distribution-program-pubkey F2Zu7QZiTYUhPd7u9ukRVwxh7B71oA3NMJcHuCHc29P2 \
       --merkle-root-upload-authority ESgP63knYThVSNWcwgwzA8cnh2MnUf6SaCWpnC8mrkn3 \
-      --commission-bps {{ commission-bps }} \
+      --commission-bps {{ commission_bps }} \
       --relayer-url {{ jito_relayer_url }} \
       --block-engine-url {{ jito_block_engine_url }} \
       --shred-receiver-address {{ jito_shred_receiver_address }}
